--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatApp</title>
+
+    <link rel="stylesheet" href="~/css/site.css">
 </head>
 <body>
-    
+
+    <div class="navbar">
+
+
+    </div>
+
+    <div class="main">
+        <div class="side-menu">
+            <a class="room-button" href="#">Room</a>
+            <a class="room-button" href="#">+</a>
+        </div>
+        <div class ="chat">
+            @RenderBody()
+        </div>
+        
+    </div>
 </body>
 </html>
