added chat layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <div class="main">
         <div class="side-menu">
             <a class="room-button" href="#">Room</a>
-            <a class="room-button" href="#">+</a>
+            <a class="room-button" href="#"><strong>+</strong></a>
         </div>
         <div class ="chat">
             @RenderBody()
