--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,1 +1,6 @@
-<h1>Hello World!</h1>
+<div class="chat-body">
+    <div class="message">
+        
+    </div>
+</div>
+<div class="chat-input"></div>
