--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -36,11 +36,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1rem;
+    margin: 0.5rem 1rem 0;
     height: 68px;
     border-radius: 5px; 
     box-shadow: 0 1px 3px 1px #222;
     background-color: #57446b;
+}
+
+.room-button > strong {
+    font-size: 36px;
 }
 
 .room-button:hover {
@@ -50,4 +54,19 @@ body {
 .chat {
     background-color: #eee;
     flex-grow:1;
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-body{
+    background-color: #eee;
+    flex-grow: 1;
+}
+
+.chat-input {
+    background-color: #444354;
+    height:70px;
+
+    z-index: 25;
+    box-shadow: 0 -1px 2px 0 #333;
 }
