message layout work

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,17 @@
 <div class="chat-body">
     <div class="message">
-        
+        <header>Anton</header>
+        <p>this is a test message</p>
+        <footer>16:00</footer>
+    </div>
+
+    <div class="message">
+        <header>Bob</header>
+        <p>Hello world</p>
+        <footer>16:02</footer>
     </div>
 </div>
-<div class="chat-input"></div>
+<div class="chat-input">
+    <input type="text">
+    <button>Send</button>
+</div>
