--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin:0;
     height: 100vh;
@@ -8,7 +12,7 @@ body {
 
 .navbar {
     background-color: #342742;
-    height: 50px;
+    min-height: 50px;
     z-index: 100;
     box-shadow: 0 1px 2px 0 #333;
 }
@@ -22,7 +26,7 @@ body {
 
 .side-menu {
     background-color: #443554;
-    width:100px;
+    min-width:100px;
     z-index: 50;
     box-shadow: 1px 0 2px 0 #333;
     display: flex;
@@ -56,17 +60,54 @@ body {
     flex-grow:1;
     display: flex;
     flex-direction: column;
+    max-height: 100%;
 }
 
 .chat-body{
     background-color: #eee;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 1rem;
+    overflow:auto;
 }
 
 .chat-input {
     background-color: #444354;
-    height:70px;
-
+    min-height:70px;
     z-index: 25;
     box-shadow: 0 -1px 2px 0 #333;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+}
+
+.message {
+    display: flex;
+    flex-direction: row;
+    margin-top: 0.2rem;
+}
+
+.message:first-child {
+    margin-top:auto;
+}
+
+.message > * {
+    padding: 0.2rem;
+}
+
+.message > header {
+    font-weight: bold;
+    min-width: 100px;
+    text-align: right;
+}
+
+.message > p {
+    margin: 0;
+    flex-grow: 5;
+}
+
+.message > footer {
+    width:60px;
+    text-align: center;
 }
